--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -298,4 +298,7 @@
   <data name="shop_control" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Option\shop_control.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="env" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\API\.env;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
